# HyPainter

./: .gitignore  README.md  README.zh-CN.md  progress.md  settings.gradle.kts
android/: README.md
android/app/: README.md  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/lukasvi/hypainter/: CanvasViewport.kt  MainActivity.kt  StylusControlsHider.kt
android/app/src/main/res/mipmap-hdpi/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: file_paths.xml
android/app/src/test/java/io/github/lukasvi/hypainter/: CanvasViewportTest.kt  StylusControlsHiderTest.kt
android/core-ffi/: README.md
android/design-system/: README.md
docs/: README.md  android-studio-debugging.md  current-architecture.md  device-input-test-plan.md  foundation-design.md  mvp-status.md
gradle/: libs.versions.toml
rust/: Cargo.toml  README.md
rust/crates/: README.md
rust/crates/HyP_brush/: Cargo.toml  README.md
rust/crates/HyP_brush/src/: lib.rs
rust/crates/HyP_compositor/: Cargo.toml  README.md
rust/crates/HyP_compositor/src/: lib.rs
rust/crates/HyP_core/: Cargo.toml  README.md
rust/crates/HyP_core/src/: lib.rs
rust/crates/HyP_export/: Cargo.toml  README.md
rust/crates/HyP_export/src/: lib.rs
rust/crates/HyP_ffi/: Cargo.toml  README.md
rust/crates/HyP_ffi/src/: lib.rs
rust/crates/HyP_format/: README.md
rust/crates/HyP_tiles/: Cargo.toml  README.md
rust/crates/HyP_tiles/src/: lib.rs
scripts/: build-rust-android.ps1
(+18 files in other folders)
