[package]
name = "hyp_export"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hyp_core = { path = "../HyP_core" }
hyp_compositor = { path = "../HyP_compositor" }

[dev-dependencies]
hyp_brush = { path = "../HyP_brush" }

[lib]
path = "src/lib.rs"
