[package]
name = "hyp_ffi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
hyp_brush = { path = "../HyP_brush" }
hyp_compositor = { path = "../HyP_compositor" }
hyp_core = { path = "../HyP_core" }
hyp_export = { path = "../HyP_export" }
